# cmake-cxx-modules

./: .gitignore  CMakeLists.txt  README.md
cli/: CMakeLists.txt  main.cpp
docs/: import-export-module.md  modules-cppreference.md
lib/: CMakeLists.txt
lib/Alpha/: CMakeLists.txt  Impl.cpp
lib/Bravo/: CMakeLists.txt  Impl.cpp  Internal.ixx
lib/Greeter/: CMakeLists.txt  Impl.cpp
lib/Introducer/: CMakeLists.txt  Impl.cpp  Internal.ixx
modules/: example.ixx
modules/example/: Alpha.ixx  Bravo.ixx  Greeter.ixx  Introducer.ixx  Mod.ixx
modules/example/Alpha/: Mod.ixx
